Fixed style errors on mobile on about pages

--- a/scss/modules/_front-cover.scss
+++ b/scss/modules/_front-cover.scss
@@ -199,9 +199,9 @@ body {
     & .tweet-bubble {
       display: none;
     }
-  }
-  .block-color h2 span {
-    margin: 0 -50%;
+    &.block-color h2 span {
+      margin: 0 -50%;
+    }
   }
 }
 .block-color h1, .block-color h2, .block-color h3, .block-color p {
@@ -1299,3 +1299,24 @@ footer.node__meta {
 #block-nattoscholarshipbasicinfo {
   padding-bottom: 56%;
 }
+#block-beccateachingstudentendorsement img {
+  width: 100%;
+  height: auto;
+}
+#block-teacherorartist a img {
+  width: 100%;
+  height: auto;
+  -webkit-transition: all 0.6s ease; /* Safari and Chrome */
+  -moz-transition: all 0.6s ease; /* Firefox */
+  -ms-transition: all 0.6s ease; /* IE 9 */
+  -o-transition: all 0.6s ease; /* Opera */
+  transition: all 0.6s ease;
+  &:hover {
+    -webkit-transform:scale(1.3); /* Safari and Chrome */
+    -moz-transform:scale(1.3); /* Firefox */
+    -ms-transform:scale(1.3); /* IE 9 */
+    -o-transform:scale(1.3); /* Opera */
+     transform:scale(1.3);
+  }
+}
+
